force-app/main/default/objects/Resource_Assignment__c/Resource_Assignment__c.object-meta.xml
<CustomObject>
    <label>Resource Assignment</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Resource Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>