force-app/main/default/objects/Resource_Assignment__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <formula>(Number_of_Hours_Worked_in_Regular_Time__c *  Resource_Cost_Regular_Shadow__c)  + (Number_of_Hours_Worked_in_Overtime__c *  Resource_Cost_Overtime_Shadow__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>