force-app/main/default/objects/Resource_Assignment__c/fields/Fine_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Fine_Shadow__c</fullName>
    <label>Fine (Shadow)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>