force-app/main/default/objects/Resource_Assignment__c/fields/Number_of_Hours_Late__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Late__c</fullName>
    <formula>MAX(0, (End_Time__c - Work_Order__r.End_Time__c ) * 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hours Late</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>