force-app/main/default/objects/Resource_Assignment__c/fields/Number_of_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Worked__c</fullName>
    <formula>(End_Time__c - Start_Time__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>