force-app/main/default/objects/Resource_Assignment__c/fields/Number_of_Hours_Worked_in_Overtime__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Worked_in_Overtime__c</fullName>
    <formula>Number_of_Hours_Worked__c  - Number_of_Hours_Worked_in_Regular_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hours Worked in Overtime</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>