force-app/main/default/objects/Resource_Assignment__c/fields/Number_of_Hours_Worked_in_Regular_Time__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Worked_in_Regular_Time__c</fullName>
    <formula>IF((MIN(Resource_End_Regular_Time_Hour_Shadow__c, End_Hour__c)- MAX(Resource_Start_Regular_Time_Hour_Shadow__c,Start_Hour__c)) &lt; 0, 0 , (MIN(Resource_End_Regular_Time_Hour_Shadow__c, End_Hour__c)- MAX(Resource_Start_Regular_Time_Hour_Shadow__c,Start_Hour__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Hours Worked in Regular Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>