force-app/main/default/objects/Resource_Assignment__c/fields/Resource_Cost_Regular_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Resource_Cost_Regular_Shadow__c</fullName>
    <label>Resource Cost Regular (Shadow)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>