force-app/main/default/objects/Resource_Assignment__c/fields/Resource_Start_Regular_Time_Hour__c.field-meta.xml
<CustomField>
    <fullName>Resource_Start_Regular_Time_Hour__c</fullName>
    <formula>VALUE(LEFT(TEXT(Resource__r.Start_Regular_Working_Time__c), 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Start Regular Time_Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>