force-app/main/default/objects/Resource_Assignment__c/fields/Resource_Start_Regular_Time_Hour_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Resource_Start_Regular_Time_Hour_Shadow__c</fullName>
    <label>Resource_Start Regular Time Hour Shadow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>