force-app/main/default/objects/Resource_Assignment__c/fields/Start_Hour__c.field-meta.xml
<CustomField>
    <fullName>Start_Hour__c</fullName>
    <formula>VALUE(MID(TEXT(Start_Time__c + (2/24)), 12, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>