force-app/main/default/objects/Resource_Assignment__c/validationRules/All_work_should_be_done.validationRule-meta.xml
<ValidationRule>
    <fullName>All_work_should_be_done</fullName>
    <active>false</active>
    <errorConditionFormula>ROUND((Number_of_Hours_Worked__c* Resource__r.Performance__c), 0) &lt;&gt;  ROUND(Work_Order__r.Amount_of_Work__c,0)</errorConditionFormula>
    <errorMessage>Work order should be done according to performance.</errorMessage>
</ValidationRule>