force-app/main/default/objects/Resource_Assignment__c/validationRules/Cannot_start_before_start_time.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_start_before_start_time</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Time__c &lt; Work_Order__r.Start_Time__c</errorConditionFormula>
    <errorMessage>Cannot create a Resource Assignment starting before the Work Orders&apos; start time</errorMessage>
</ValidationRule>