force-app/main/default/objects/Resource_Assignment__c/validationRules/End_of_the_week.validationRule-meta.xml
<ValidationRule>
    <fullName>End_of_the_week</fullName>
    <active>true</active>
    <errorConditionFormula>End_Time__c &gt; Work_Order__r.Week__r.Week_End__c + 3</errorConditionFormula>
    <errorMessage>Can not create assignment, which is not in current week</errorMessage>
</ValidationRule>