force-app/main/default/objects/Resource_Assignment__c/validationRules/Start_and_End_Time_must_be_on_the_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_and_End_Time_must_be_on_the_same</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
 AND(
   DAY(DATEVALUE(Start_Time__c)) == DAY(DATEVALUE(End_Time__c)),
   MONTH(DATEVALUE(Start_Time__c)) == MONTH(DATEVALUE(End_Time__c)),
   YEAR(DATEVALUE(Start_Time__c)) == YEAR(DATEVALUE(End_Time__c))
 )
)</errorConditionFormula>
    <errorMessage>Start and end time must be on the same day</errorMessage>
</ValidationRule>