force-app/main/default/objects/Resource_Assignment__c/validationRules/Start_Time_should_be_exact_hour.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Time_should_be_exact_hour</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE(MID(Text( Start_Time__c ),15,2))&lt;&gt; 0</errorConditionFormula>
    <errorMessage>Start time should be on start hour (For example, 10:00, 16:00, 22:00)</errorMessage>
</ValidationRule>