force-app/main/default/objects/Resource_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>End_Hour__c</columns>
    <columns>End_Time__c</columns>
    <columns>Fine__c</columns>
    <columns>Number_of_Hours_Late__c</columns>
    <columns>Number_of_Hours_Worked__c</columns>
    <columns>Number_of_Hours_Worked_in_Overtime__c</columns>
    <columns>Number_of_Hours_Worked_in_Regular_Time__c</columns>
    <columns>Schedule__c</columns>
    <columns>Start_Hour__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Work_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>